--- a/config/measurements.yaml
+++ b/config/measurements.yaml
@@ -2,7 +2,7 @@ measurements:
   depth:
     base_et_delta: 1.0
     default_sd: 0.1
-    buffer_size: 2
+    buffer_size: 2 # NOT SHARED
     missed_tolerance: 10 # How many of these messages do we need to miss on updates cycles before we indicate a bookend
 
   modem_range:
